[package]
name    = "nvdialog-rs"
version = "0.2.0"
edition = "2021"

repository  = "https://github.com/AndroGR/nvdialog-rs.git"
description = "High-level Rust bindings for NvDialog"
license     = "MIT"
keywords    = [
        "nvdialog",
        "dialog",
        "gui",
        "ffi",
        "bindings"
]

[dependencies]
thiserror = "1.0.40"

[lib]
doctest = false

[features]
default = []
