[workspace]
members = [
        "nvdialog-sys"
]

[package]
name    = "nvdialog-rs"
version = "0.3.0"
edition = "2021"
repository  = "https://github.com/tseli0s/nvdialog-rs.git"
description = "High-level Rust bindings for NvDialog"
license     = "MIT"
keywords    = [
        "nvdialog",
        "dialog",
        "gui",
        "ffi",
        "bindings"
]

[dependencies]
thiserror    = "1.0.40"
nvdialog-sys = { path = "nvdialog-sys", version = "*" }

[lib]
doctest = false

[features]
default = []
